<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/random_vines"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="496dp"
        android:background="@drawable/buttonshape"
        android:text="random vines"
        android:textAllCaps="false"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cs_feels"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="308dp"
        android:background="@drawable/buttonshape"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:text="@string/cs_feels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/entering_cbtf"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/buttonshape"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:text="@string/entering_cbtf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/green_mp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="120dp"
        android:textSize="20dp"
        android:background="@drawable/buttonshape"
        android:text="@string/when_you_see_green_on_an_mp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/me_lecture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="496dp"
        android:background="@drawable/buttonshape"
        android:text="@string/me_in_lecture"
        android:textSize="20dp"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/why_geoff"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="308dp"
        android:background="@drawable/buttonshape"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:text="@string/jeff_with_a_g"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="47dp"
        android:background="@color/colorVine"
        android:gravity="center"
        android:text="click a button to begin"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />
</android.support.constraint.ConstraintLayout>